Sun Sep  9 02:44:21 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* ext/zlib/extconf.rb: Use an exception instaed of bare puts.

Sun Sep  9 02:44:21 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* ext/psych/extconf.rb: Use an exception instaed of bare abort.

Sun Sep  9 02:44:21 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* ext/fiddle/extconf.rb: Use an exception instaed of bare abort.

Sun Sep  9 02:44:21 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* ext/readline/extconf.rb: Use an exception instead of bare exit.

Sun Sep  9 02:34:39 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* ext/extmk.rb: Show a message when extconf.rb raised an exception.
	* ext/openssl/extconf.rb: Use exception raising instead of message
	  and/or abort. We want to display error message to console _and_
	  logging into mkmf.log.

Sun Sep  9 02:30:20 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (rb_mutex_lock): stop multiple threads use
	  pthread_cond_timedwait() concurrently. [Bug #6278] [ruby-core:44275]

Thu Aug 30 09:24:43 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/ftp.rb (URI::FTP#initialize): raise InvalidURIError if "//"
	  is not present [ruby-core:47344] [Bug #6945]

Tue Aug 28 00:40:14 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/webrick/test_cgi.rb (TestWEBrickCGI#start_cgi_server): there are
	  no guarantee of existance of RbConfig::CONFIG['LIBPATHENV'].
	  it only exists in Unix-like environments.

	* test/webrick/test_filehandler.rb
	  (WEBrick::TestFileHandler#test_script_disclosure): ditto.

Thu Aug 23 12:08:25 2012  Hiroshi Shirosaki  <h.shirosaki@gmail.com>

	* test/ruby/test_file_exhaustive.rb
	  (TestFileExhaustive#test_stat_special_file): add a test.
	  GetFileAttributesExW fails to get attributes of special files
	  such as pagefile.sys.

	* win32/win32.c (check_valid_dir): for performance, check the path
	  by FindFirstFileW only if the path contains "...".
