@@ -57,6 +57,7 @@ if %w'z libz zlib1 zlib zdll'.find {|z| have_library(z, 'deflateReset')} and
 
   have_func('crc32_combine', 'zlib.h')
   have_func('adler32_combine', 'zlib.h')
+  have_type('z_crc_t', 'zlib.h')
 
   create_makefile('zlib')
 
